[tool.poetry]
name = "arcaflow-plugin-utilities"
version = "0.1.0"
description = ""
authors = ["Harshith-umesh <harshith.umesh.nat@gmail.com>"]
license = "Apache-2.0+GPL-2.0-only"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
arcaflow-plugin-sdk = "0.8.0"



[tool.poetry.dev-dependencies]
docformatter = "^1.5.0"
autoflake = "^1.7.6"
black = "^22.10.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
